languages/montiarc-fe/src/test/resources/contextconditions/invalid/NonExistantReferencedSubComponent.arc
package invalid;

component NonExistantReferencedSubComponent {
  component NonExistantComponent na;
  
  component de.ma.Delay delay;
}